samples/_failures_safe/1761161903_e1d5ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6d01e5b.c: In function ‘main’:
./samples/SAFE/__tmp_f6d01e5b.c:144:9: error: expected declaration or statement at end of input
  144 |         printf("No words found in input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_f6d01e5b.c:144:9: error: expected declaration or statement at end of input
